fix admin displays on small screens

--- a/styles/AdminSearchAPI.module.css
+++ b/styles/AdminSearchAPI.module.css
@@ -189,7 +189,7 @@
 
 .finalButtonContainer {
   position: fixed;
-  bottom: 0;
+  bottom: 8px;
   width: 100%;
   height: auto;
   display: flex;
@@ -320,8 +320,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: auto;
-    padding: 0;
+    padding: 8px;
     gap: 8px;
   }
 
@@ -359,6 +360,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
     width: 100%;
     height: auto;
   }
@@ -378,7 +380,9 @@
     align-items: center;
     justify-content: center;
     border-radius: 12px;
-    width: 50px;
+    width: 40px;
+    padding: 8px 18px;
+    border-radius: 8px;
   }
 
   .buttonContainer {
